--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -1076,7 +1076,7 @@ minimum requirements, as explained below.
         Analysis (\course{5210}), Ocean Dynamics (\course{5221}), Estuary,
         Coast and Shelf Dynamics (\course{5222}).
 
-    \item Other Classes, as required by the Advisory Committee e.g. Numerical
+    \item Other Classes, as required by the \advcom, \eg Numerical
         Modelling (\course{5220}), Ocean Waves (\course{5223}), Introduction to
         Acoustical Oceanography (\course{5250}), Advanced Marine Particles
         (\course{5293}).
@@ -1086,14 +1086,14 @@ minimum requirements, as explained below.
 %C2	PhD COMMITTEE STRUCTURE
 \subsection{\label{sec:phd_advisory_committee_structure}PhD committee structure}
 
-\p The Thesis Advisory Committee must be formed by October 1st of the first year
-of study.
+\p The \advcom must be formed by October 1st of the first year of
+study.\fixme{Need to restate in terms of months in program.}
 
-\p The PhD Advisory Committee consists of at least four members. There must be two
+\p The PhD \advcom consists of at least four members. There must be two
 full-time faculty members from the Oceanography Department (not Adjunct
-Professors) on the advisory committee. If a regular faculty member serving on
-the committee leaves the department, a replacement with another faculty member
-must be made.
+Professors)\fixme{Need new wording on adj-prof} on the \advcom. If a regular
+faculty member serving on the committee leaves the department, a replacement
+with another faculty member must be made.
 
 \p One member will be from another sub-discipline, and it is desirable that at
 least one member of the committee be from outside the Department.
